--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>react</title>
 </head>
 <body>
     <div id="">
-        <h1 id="js">helloworld</h1> 
+        <h1 id="js">Hello World</h1> 
+        <h1 id="js">Hello World</h1>
     </div>
     
 
