--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <title>react</title>
 </head>
 <body>
-    <div id="">
-        <h1 id="js">Hello World</h1> 
-        <h1 id="js">Hello World</h1>
+    <div id="root">
+        <h1 class="js">Hello World</h1> 
+        <h1 class="js">Hello World</h1>
     </div>
     
 
-    <script></script>
+    <script src="index.js"></script>
 </body>
 </html>
